src/App.css
@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");

#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

body {
  background: linear-gradient(135deg, #b068e9, #6463e7);
}

.accordion {
  background-color: #ffffff;
  border-radius: 23px;
  border: none;
  padding: 27px;
}

.main-header {
  margin-top: -77px;
}

.women-online {
  width: 240px;
  transform: translate(3px, -136px);
}

.main-header {
  font-family: Kumbh Sans;
  font-weight: 700;
  font-size: 32px;
  line-height: 100%;
  color: #1e1f36;
}

.faq-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 19px;
}

.faq-item {
  font-family: Kumbh Sans;
  font-weight: 400;
  font-size: 12px;
  line-height: 18px;
  color: #787887;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 35px;
  cursor: pointer;
}

.faq-item.open span,
.faq-item-second.open span,
.faq-item-three.open span {
  font-family: Kumbh Sans;
  font-weight: 700;
  font-size: 14px;
  line-height: 100%;
  letter-spacing: 0px;
  color: #1e1f36;
}

.faq-item.open span {
  color: #1e1f36;
  font-family: Kumbh Sans;
  font-weight: 700;
  font-size: 13px;
  line-height: 100%;
}

.faq-answer {
  font-size: 12px;
  font-family: Kumbh Sans;
  font-weight: 400;
  line-height: 18px;
  color: #787887;
}

.hidden {
  display: none;
}

.faq-item:hover {
  color: #f47b56;
}
.faq-item-second {
  font-family: Kumbh Sans;
  font-weight: 400;
  font-size: 12px;
  line-height: 18px;
  color: #787887;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 82px;
  cursor: pointer;
}

.faq-item-second:hover {
  color: #f47b56;
}

.faq-item-three {
  font-family: Kumbh Sans;
  font-weight: 400;
  font-size: 12px;
  line-height: 18px;
  color: #787887;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 44px;
  cursor: pointer;
}

.faq-item-three:hover {
  color: #f47b56;
}

.line {
  background-color: #e8e8ea;
  width: 279px;
  height: 1px;
  opacity: 1;
  top: 33px;
}

@media (min-width: 1024px) {
  .accordion {
    display: flex;
  }

  .women-online {
    width: 500px;
    transform: translate(-73px, -46px);
  }

  .main-header {
    transform: translate(127px, 67px);
  }

  .faq-container {
    margin: 50px;
  }

  .faq-item.open span,
  .faq-item-second.open span,
  .faq-item-three.open span {
    font-size: 14px;
  }
}

